--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         AOS.init();
       </script>
     <!-- my-js -->
-    <script src="/js/bannerslider.js"></script>
+    <script src="./js/bannerslider.js"></script>
     <script src="./js/navmenu.js"></script>
 </body>
 
